setting up for multi dev

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <link rel="stylesheet" href="css/stage.css">
-        <script data-main="js/main" src="js/require.js"></script>
+        <script data-main="src/main" src="src/require.js"></script>
     </head>
     <body>
 
