--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <script data-main="src/main" src="src/require.js"></script>
     </head>
     <body>
-
+        <div id="client-messages"></div>
     </body>
 </html>
