--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     </head>
     <body>
         <div id="client-messages"></div>
+        <progress max="100" value="0" id="loading-indicator"></progress>
     </body>
 </html>
