--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="cache.manifest">
     <head>
         <title>Anlsem</title>
         <meta charset="UTF-8">
