--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html manifest="cache.manifest">
+<html>
     <head>
         <title>Anlsem</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+        <link rel="stylesheet" href="css/keyboard.css">
         <link rel="stylesheet" href="css/stage.css">
-        <script data-main="src/main" src="src/require.js"></script>
+        <script data-main="src/app/main" src="src/lib/require.js"></script>
     </head>
     <body>
         <div id="client-messages"></div>
-        <progress max="100" value="0" id="loading-indicator"></progress>
     </body>
 </html>
