overhaul, added pixi

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-        <link rel="stylesheet" href="css/keyboard.css">
         <link rel="stylesheet" href="css/stage.css">
         <script data-main="src/app/main" src="src/lib/require.js"></script>
     </head>
     <body>
-        <div id="client-messages"></div>
+        <textarea id="text-input"></textarea>
+        <progress id="loading-indicator" class="active" max="100" value="0"></progress>
     </body>
 </html>
