--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <body>
         <textarea id="text-input"></textarea>
         <progress id="loading-indicator" class="active" max="100" value="0"></progress>
+        <canvas id="primary-canvas"></canvas>
     </body>
 </html>
