connection control on client

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="cache.manifest">
+<html>
     <head>
         <title>Anlsem</title>
         <meta charset="UTF-8">
@@ -12,6 +12,7 @@
     <body>
         <textarea id="text-input"></textarea>
         <progress id="loading-indicator" class="active" max="100" value="0"></progress>
+        <div id="client-state">initializing</div>
         <canvas id="primary-canvas"></canvas>
     </body>
 </html>
