--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-        <link rel="stylesheet" href="css/stage.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/pixel.theme.css">
         <script data-main="src/app/main" src="src/lib/require.js"></script>
     </head>
     <body>
-        <textarea id="text-input"></textarea>
-        <progress id="loading-indicator" class="active" max="100" value="0"></progress>
-        <div id="client-state">initializing</div>
-        <canvas id="primary-canvas"></canvas>
+        <div id="state-indicator">initializing</div>
     </body>
 </html>
