--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
     <head>
         <title>Anslem</title>
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+        <link rel="stylesheet" href="css/touchables.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/pixel.theme.css">
+
         <script data-main="src/app/main" src="src/lib/require.js"></script>
     </head>
     <body>
