--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
+        <link rel="stylesheet" href="css/animations.css">
         <link rel="stylesheet" href="css/touchables.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/pixel.theme.css">
